package ie.gmit.sw;

public class FileWithData {
  private String pathName;
  private String fileName;
  /** @return the pathName */
  
  public String getPathName() {
    return pathName;
  }

  /** @param pathName the pathName to set */
  
  public void setPathName(String pathName) {
    this.pathName = pathName;
  }

  /** @return the fileName */
  
  public String getFileName() {
    return fileName;
  }

  /** @param fileName the fileName to set */
  
  public void setFileName(String fileName) {
    this.fileName = fileName;
  }
}
