package ie.gmit.sw;

public interface FilteringInterface {

  /**
   * Blah something doc.
   *
   * @param pathname d
   * @param pathname2 a
   */
  void processImage(String pathname, String pathname2);
}